<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>event_bridge_cpp</name>
  <version>0.0.1</version>
  <description>ROS2 C++ bridge package depending on all event camera submodule packages.</description>
  <maintainer email="xogns2079@gmail.com">taehun-ryu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>event_camera_msgs</depend>
  <depend>event_camera_codecs</depend>
  <depend>event_camera_legacy_tools</depend>
  <depend>libcaer_driver</depend>
  <depend>event_camera_tools</depend>
  <depend>event_camera_renderer</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
